[project]
name = "bach-fresh_linkedin_profile_data"
version = "1.0.0"
description = "RapidAPI: freshdata-freshdata-default/fresh-linkedin-profile-data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_fresh_linkedin_profile_data = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-fresh_linkedin_profile_data"
Repository = "https://github.com/bachstudio/bach-fresh_linkedin_profile_data"
Documentation = "https://github.com/bachstudio/bach-fresh_linkedin_profile_data#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'